# rp2040-memory-mapped-register-access

./: CMakeLists.txt  README.md
include/: register.h
src/: main.c
